# sleep

./: .gitignore  .netlifyignore  CLAUDE.md  README.md  method.md  package-lock.json  package.json
.specstory/history/: connect-app-to-remote-repo.md  debugging-playpausebutton-js-integration-issues.md  investigating-mp3-play-button-glitch.md  react-pwa-for-meditation-audio-playback.md
audio-utilities/: README.md  analyze_audio.py  pyproject.toml
audio-utilities/input/: .gitkeep
audio-utilities/output/: .gitkeep  analysis_report.txt
docs/: relax-script.txt  sleep-script.txt
public/: about.md  brittney-full-meditation-raw_alignment.json  index.html  manifest.json
src/: App.js  index.js  service-worker.js  serviceWorkerRegistration.js
src/components/: AboutModal.js  AudioPlayer.js  AudioPlayer.test.js  MainContent.js
src/components/audioPlayer/: ModeSelector.js  NarratorSelector.js  PlayPauseButton.js  PlayPauseButton.test.js  SleepTimer.js  TimeSlider.js  VolumeControl.js  utils.js
src/components/audioPlayer/context/: AudioContext.js
src/components/audioPlayer/hooks/: useAudio.js  useSleepTimer.js
src/styles/: index.css
