[project]
name = "audio-utilities"
version = "0.1.0"
description = "Audio analysis and optimization utilities for web usage"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]